--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -41,5 +41,5 @@ jobs:
     # 4. 构建并推送后端镜像
     - name: Build and Push Backend Image
       run: |
-        docker build -t ${{ secrets.DOCKERHUB_USERNAME }}/backend:latest ./backend
+        docker build -t ${{ secrets.DOCKERHUB_USERNAME }}/backend:latest ./CampusMarket-backend
         docker push ${{ secrets.DOCKERHUB_USERNAME }}/backend:latest
