--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -38,6 +38,10 @@ jobs:
       with:
         username: ${{ secrets.DOCKERHUB_USERNAME }}
         password: ${{ secrets.DOCKERHUB_TOKEN }} # 在GitHub仓库设置中配置此Secret
+    - name: Build with Maven
+      run: |
+        cd CampusMarket-backend
+        mvn clean package
     # 4. 构建并推送后端镜像
     - name: Build and Push Backend Image
       run: |
